--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Christy's Portfolio
+description: A college student aspiring to be a Linux system administrator.
 theme: jekyll-theme-cayman
